# gco-ext

./: .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  MANIFEST.in  README.md  literary_config.json  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py
.github/workflows/: tests.yml  wheels.yml
gco/: __init__.py
src/: gco_ext.cpp
src/gco/: __init__.py
src/gco.egg-info/: PKG-INFO  SOURCES.txt
tests/: points.npy  test-circle.ipynb
