[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "scikit-build",
    "cmake>=3.17",
    "pybind11>=2.9.0",
    "ninja; platform_system!='Windows'"
]

build-backend = "setuptools.build_meta"

[tool.check-manifest]
ignore = [
    ".pre-commit-config.yaml",
    "*.in",
    "README.txt",
    "requirements-dev.txt",
    "tests/**",
    "literary_config.json"
]
