[metadata]
name = gco
version = 2.0.1
author = Angus Hollands
author_email = goosey15@gmail.com
description = Python bindings for the GCO library by Veksler and Delong.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/agoose77/gco-ext
project_urls = 
    Research = https://vision.cs.uwaterloo.ca/code
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering

[options]
zip_safe = False
python_requires = >=3.8
